# tankgame-archive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/gui/: gui.json
assets/shader/: font.frag  ingame.frag  lighting.frag  normal_map.frag  normal_map.vert  texture.frag  texture.vert
assets/shader/attic/: ingame.frag  vertexshader.glsl
assets/sound/dumpster/tank/: fire.flac
assets/texture/attic/: white-circle.xcf
client/: client.cpp  client.hpp  client_game_state.cpp  client_game_state.hpp  client_state.hpp  commands.cpp  console.cpp  console.hpp  game_input.cpp  game_render.cpp  gui.cpp  gui.hpp  main.cpp
client/config/: config.cpp  config.hpp
client/graphics/: camera.cpp  camera.hpp  glad.cpp  glad.h  graphics.cpp  graphics.hpp  graphics_manager.cpp  graphics_manager.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
client/gui/: text_box.cpp  text_box.hpp
client/states/: connecting.cpp  create_session.cpp  handshake.cpp  ingame.cpp  lobby.cpp  main_menu.cpp  options.cpp  sessionbrowser.cpp
common/: command_manager.cpp  command_manager.hpp  common.hpp  components.hpp  crc32.cpp  crc32.hpp  disconnect_reason.hpp  entity.hpp  file_watcher.cpp  file_watcher.hpp  frame_allocator.hpp  frame_timer.cpp  frame_timer.hpp  game_sim.cpp  game_state.cpp  game_state.hpp  log.cpp  log.hpp  net_msg.hpp  net_msg_handler_map.cpp  net_msg_handler_map.hpp  net_platform.hpp  packet.hpp  player_info.hpp  session_info.hpp  socket.cpp  socket.hpp  string_util.hpp
include/: SDL_test_common.h  nuklear.h  nuklear_sdl_gl3.h
misc/: bookmarks.txt
misc/attic/: .gitlab-ci.yml  CMakeLists.txt  index.html
misc/attic/docker/deploy/: Dockerfile
misc/attic/docker/openssh-client/: Dockerfile
server/: client_connection.cpp  client_connection.hpp  client_connection_state.hpp  main.cpp  server.cpp  server.hpp  server_game_state.cpp  server_game_state.hpp  session.cpp  session.hpp
server/client_connection_states/: handshake.cpp  ingame.cpp  join_session.cpp  lobby.cpp
